Task-10 Add cache