@@ -1,9 +1,6 @@
 package com.backend.course.backendcourseadditional.service;
 
-import com.backend.course.backendcourseadditional.dto.PostDto;
-import com.backend.course.backendcourseadditional.dto.PostLikeDto;
-import com.backend.course.backendcourseadditional.dto.SelfLikeStatsDto;
-import com.backend.course.backendcourseadditional.dto.UserDto;
+import com.backend.course.backendcourseadditional.dto.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.ParameterizedTypeReference;
@@ -23,61 +20,35 @@ public class StatisticsService {
     @Value("${backend.app.url}")
     private String backendAppUrl;
 
+    // Кеш для хранения постов
+    private final Map<Long, PostDto> postCache = new HashMap<>();
+
+    public Long getCacheSize() {
+        return (long) postCache.size();
+    }
+
     public List<SelfLikeStatsDto> getSelfLikeStats() {
         // Получаем всех пользователей
-        List<UserDto> users = restTemplate.exchange(
-                backendAppUrl + "/users",
-                HttpMethod.GET,
-                null,
-                new ParameterizedTypeReference<List<UserDto>>() {}
-        ).getBody();
-
+        List<UserDto> users = getAllUsers();
         if (users == null || users.isEmpty()) {
             return Collections.emptyList();
         }
 
-        // Получаем все посты
-        List<PostDto> posts = restTemplate.exchange(
-                backendAppUrl + "/posts",
-                HttpMethod.GET,
-                null,
-                new ParameterizedTypeReference<List<PostDto>>() {}
-        ).getBody();
-
-        if (posts == null || posts.isEmpty()) {
-            return users.stream()
-                    .map(user -> new SelfLikeStatsDto(user.getId(), user.getNickname(), 0L))
-                    .sorted(Comparator.comparing(SelfLikeStatsDto::getUserId))
-                    .collect(Collectors.toList());
-        }
-
         // Получаем все лайки
-        List<PostLikeDto> likes = restTemplate.exchange(
-                backendAppUrl + "/likes",
-                HttpMethod.GET,
-                null,
-                new ParameterizedTypeReference<List<PostLikeDto>>() {}
-        ).getBody();
-
-        if (likes == null || likes.isEmpty()) {
-            return users.stream()
-                    .map(user -> new SelfLikeStatsDto(user.getId(), user.getNickname(), 0L))
-                    .sorted(Comparator.comparing(SelfLikeStatsDto::getUserId))
-                    .collect(Collectors.toList());
-        }
-
-        // Создаем map для быстрого поиска постов по id
-        Map<Long, PostDto> postMap = posts.stream()
-                .collect(Collectors.toMap(PostDto::getId, post -> post));
+        List<PostLikeDto> likes = getAllLikes();
+        List<UserLikeToUserPostDto> userLikeToUserPostDtos = likes.stream()
+                .map(like -> new UserLikeToUserPostDto(
+                        like.getUserId(),
+                        getPost(like.getPostId()).getAuthorId()
+                ))
+                .toList();
 
         // Подсчитываем самолайки для каждого пользователя
         Map<Long, Long> selfLikesCount = new HashMap<>();
-
-        for (PostLikeDto like : likes) {
-            PostDto post = postMap.get(like.getPostId());
-            if (post != null && post.getAuthorId().equals(like.getUserId())) {
+        for (UserLikeToUserPostDto likeToPost : userLikeToUserPostDtos) {
+            if (likeToPost != null && likeToPost.getLikeUserId().equals(likeToPost.getPostUserId())) {
                 // Это самолайк: автор поста = пользователь который поставил лайк
-                selfLikesCount.merge(like.getUserId(), 1L, Long::sum);
+                selfLikesCount.merge(likeToPost.getLikeUserId(), 1L, Long::sum);
             }
         }
 
@@ -90,5 +61,49 @@ public class StatisticsService {
                 ))
                 .sorted(Comparator.comparing(SelfLikeStatsDto::getUserId))
                 .collect(Collectors.toList());
+    }
+
+    private List<PostLikeDto> getAllLikes() {
+        return restTemplate.exchange(
+                backendAppUrl + "/likes",
+                HttpMethod.GET,
+                null,
+                new ParameterizedTypeReference<List<PostLikeDto>>() {
+                }
+        ).getBody();
+    }
+
+    private List<UserDto> getAllUsers() {
+        return restTemplate.exchange(
+                backendAppUrl + "/users",
+                HttpMethod.GET,
+                null,
+                new ParameterizedTypeReference<List<UserDto>>() {
+                }
+        ).getBody();
+    }
+
+
+    private PostDto getPost(Long id) {
+        // Сначала проверяем наличие поста в кеше
+        if (postCache.containsKey(id)) {
+            return postCache.get(id);
+        }
+
+        // Если поста нет в кеше, запрашиваем его из API
+        PostDto post = restTemplate.exchange(
+                backendAppUrl + "/posts/" + id,
+                HttpMethod.GET,
+                null,
+                new ParameterizedTypeReference<PostDto>() {
+                }
+        ).getBody();
+
+        // Сохраняем пост в кеш
+        if (post != null) {
+            postCache.put(id, post);
+        }
+
+        return post;
     }
 }
